# littlejokebook

./: .gitignore  AGENTS.md  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  eval_segments_batch.py  eval_triplets.py  inspect_segments.py  manual_check.py  pyproject.toml  replacement.py  start_fibonacci.py  test_prompt.py  trigger_ingest.py  worker.py
activities/: ingestion.py
backend/: .dockerignore  Dockerfile.dev  get_duration.py  main.py  manage.py  new_prompt.py  pyproject.toml  trigger_refine.py  worker.py
backend/activities/: ingestion.py
backend/catalogue/: admin.py  api.py  models.py
backend/catalogue/migrations/: 0001_initial.py
backend/docker/: entrypoint.sh  nginx.conf
backend/ingestion/: models.py
backend/ingestion/migrations/: 0001_initial.py
backend/little_jokebook/: asgi.py  settings.py  urls.py  wsgi.py
backend/workflows/: ingestion.py
catalogue/migrations/: 0002_segment_summary_segment_transcript.py
docker/: entrypoint.sh  init-db.sh
ingestion/: admin.py  models.py
ingestion/migrations/: 0001_initial.py
little_jokebook/: settings.py  urls.py
web/: Dockerfile.dev  astro.config.mjs  package-lock.json  package.json  tsconfig.json
web/src/: content.config.ts
web/src/components/: ComedianCard.astro  ComedianSearch.css  ComedianSearch.tsx
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
web/src/pages/comedians/: [slug].astro  index.astro
workflows/: fibonacci.py  ingestion.py
